--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:dll": "webpack --config ./config/webpack.dll.config.js",
     "start": "webpack-dev-server -w --env.ANALYZER=server --hot --port 3000 --config ./config/webpack.config.js",
     "lint": "eslint src",
+    "lint:scss": "stylelint src/**/*.scss --fix",
     "test": ""
   },
   "repository": {
@@ -51,6 +52,8 @@
     "pretty-quick": "^2.0.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "stylelint": "^13.3.0",
+    "stylelint-config-sass-guidelines": "^7.0.0",
     "terser-webpack-plugin": "^2.3.5",
     "webpack": "^4.40.2",
     "webpack-bundle-analyzer": "^3.6.1",
@@ -65,10 +68,12 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx}": [
-      "eslint .", "git add"
+      "eslint .",
+      "git add"
     ],
     "src/**/*.scss": [
-      "stylelint --syntax scss", "git add"
+      "stylelint --syntax scss",
+      "git add"
     ]
   },
   "husky": {
