--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,6 +2,9 @@
     "extends": "stylelint-config-sass-guidelines",
     "rules": {
         "indentation": "tab",
-        "number-leading-zero": null
+        "number-leading-zero": null,
+        "max-nesting-depth": [3, {
+            "ignoreAtRules": ["media"]
+        }]
     }
 }
